--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -52,8 +52,8 @@ body{
 
   .box{
     background-color: #ffffff;
-    margin-left: 25%;
-    max-width: 50%;
+    margin-left: 10%;
+    margin-right: 10%;
     margin-top: 1%;
     
   }
