--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -2,7 +2,7 @@ body{
     font: 15px/1.5 Arial, Helvetica, sans-serif;
     padding: 0;
     margin:0;
-    background-color: #f4f4f4fd;
+    background-color: #f4f4fd;
   }
   .container{
     width: 100%;
