--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -1,100 +1,112 @@
-body{
-    font: 15px/1.5 Arial, Helvetica, sans-serif;
-    padding: 0;
-    margin:0;
-    background-color: #f4f4fd;
-  }
-  .container{
-    width: 100%;
-    margin: 0;
-    overflow: hidden;
-  }
-  header{
-    background: #353637;
-    color: #ffffff;
-    padding-top: 30px;
-    min-height: 70px;
-    border-bottom: #af3333 3px solid; 
-  }
-  header a{
-    color: #ffffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 16px;
-    
-  }
-  header li{
-    display: inline;
-    padding: 0 20px 0 20px;
-  }
-  header #branding{
-    float: left;
-  }
-  header #branding h1{
-    margin: 0 0 0 20px;
-  }
-  header nav{
-    float: right;
-    margin-top: 10px;
-  }
-
-  .page-title-container{
-    background-color: #ffffff;
-    width: 100%;
-    margin: 0;
-    overflow: hidden;
-  }
-  pagetitle h1{
-    text-align: center;
-    color: #353637;
-    margin-left: 20px;
-  }
-
-  .box{
-    background-color: #ffffff;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 1%;
-    
-  }
-
-  table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-    margin-bottom: 20px;
-    margin-top: 20px;
+body {
+  font: 15px/1.5 Arial, Helvetica, sans-serif;
+  padding: 0;
+  margin: 0;
+  background-color: #f4f4fd;
 }
 
-td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-    width:  33%;
+.container {
+  width: 100%;
+  margin: 0;
+  overflow: hidden;
+}
+
+header {
+  background: #353637;
+  color: #ffffff;
+  padding-top: 30px;
+  min-height: 70px;
+  border-bottom: #af3333 3px solid;
+}
+
+header a {
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+header li {
+  display: inline;
+  padding: 0 20px 0 20px;
+}
+
+header #branding {
+  float: left;
+}
+
+header #branding h1 {
+  margin: 0 0 0 20px;
+}
+
+header nav {
+  float: right;
+  margin-top: 10px;
+}
+
+.page-title-container {
+  background-color: #ffffff;
+  width: 100%;
+  margin: 0;
+  overflow: hidden;
+}
+
+pagetitle h1 {
+  text-align: center;
+  color: #353637;
+  margin-left: 20px;
+}
+
+.box {
+  background-color: #ffffff;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 1%;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+  width: 33%;
 }
 
 tr:nth-child(even) {
-    background-color: #dddddd;
+  background-color: #dddddd;
 }
-img{
-  width: 100%;
+
+img {
+  width: 500px;
 }
-ol{
+
+ol {
   font-weight: bold;
   text-transform: capitalize;
   color: #3533af;
-
 }
 
-h3{
-  color: #af3333;;
+h3 {
+  color: #af3333;
+  ;
   text-transform: uppercase;
 }
-h2{
-  color: #af3333;;
+
+h2 {
+  color: #af3333;
+  ;
   text-transform: uppercase;
 }
-select{
+
+select {
   /* -webkit-appearance: none;  */
   font-size: large;
   font-weight: bold;
@@ -104,6 +116,12 @@ select{
   width: 100px;
   height: 50px;
   background: #ffffff;
-  color: #353637;;
+  color: #353637;
+  ;
   text-transform: uppercase;
+}
+#map {
+  width: 400px;
+  height: 300px;
+  background-color: #353637;
 }
